crates/parser/src/tests/snapshots/parser__tests__parser__bump_any_consumes_only_one_raw_token.snap
---
source: crates/parser/src/tests/parser.rs
description: a->b
expression: output.steps()
---
[
    Ident(1),
    Minus(1),
]
