crates/parser/src/tests/snapshots/parser__tests__parser__detects_joint_composite_tokens.snap
---
source: crates/parser/src/tests/parser.rs
description: a->b
expression: steps
---
[
    Ident(1),
    ThinArrow(2),
]
