crates/parser/src/tests/snapshots/parser__tests__parser__reparser_block_to_struct.snap
---
source: crates/parser/src/tests/parser.rs
description: "{ x }"
expression: output.steps()
---
[
    Enter(StructExpr),
    OpenBrace(1),
    Enter(FieldValue),
    Enter(FieldName),
    Ident(1),
    Exit,
    Exit,
    CloseBrace(1),
    Exit,
]
