crates/parser/src/tests/snapshots/parser__tests__parser__reparser_paren_to_tuple.snap
---
source: crates/parser/src/tests/parser.rs
description: "(x, y)"
expression: output.steps()
---
[
    Enter(TupleExpr),
    OpenParen(1),
    Enter(PathExpr),
    Enter(Path),
    Enter(PathSegment),
    Ident(1),
    Exit,
    Exit,
    Exit,
    Comma(1),
    Enter(PathExpr),
    Enter(Path),
    Enter(PathSegment),
    Ident(1),
    Exit,
    Exit,
    Exit,
    CloseParen(1),
    Exit,
]
