crates/parser/src/tests/snapshots/parser__tests__parser__reparser_repeat_to_array.snap
---
source: crates/parser/src/tests/parser.rs
description: "[1, 2]"
expression: output.steps()
---
[
    Enter(ArrayExpr),
    OpenBrack(1),
    Enter(LiteralExpr),
    Int(1),
    Exit,
    Comma(1),
    Enter(LiteralExpr),
    Int(1),
    Exit,
    CloseBrack(1),
    Exit,
]
