crates/parser/src/tests/snapshots/parser__tests__parser__reparser_struct_to_block.snap
---
source: crates/parser/src/tests/parser.rs
description: "{ x; }"
expression: output.steps()
---
[
    Enter(BlockExpr),
    OpenBrace(1),
    Enter(ExprStmt),
    Enter(PathExpr),
    Enter(Path),
    Enter(PathSegment),
    Ident(1),
    Exit,
    Exit,
    Exit,
    Semi(1),
    Exit,
    CloseBrace(1),
    Exit,
]
