crates/parser/src/tests/snapshots/parser__tests__parser__reparser_tuple_to_paren.snap
---
source: crates/parser/src/tests/parser.rs
description: (x)
expression: output.steps()
---
[
    Enter(ParenExpr),
    OpenParen(1),
    Enter(PathExpr),
    Enter(Path),
    Enter(PathSegment),
    Ident(1),
    Exit,
    Exit,
    Exit,
    CloseParen(1),
    Exit,
]
